--- a/client/src/scss/index.scss
+++ b/client/src/scss/index.scss
@@ -102,89 +102,14 @@
 .sp-popup__content {
   position: absolute;
   pointer-events: auto;
-
   height: auto;
   max-height: 90%;
   z-index: 1000;
-
   display: flex;
   flex-direction: row;
-
-  // Default center position
-  &--center-center {
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-
-  // Modifier for top-left position
-  &--top-left {
-    top: 0;
-    left: 0;
-    transform: translate(0, 0);
-  }
-
-  // Modifier for top-center position
-  &--top-center {
-    top: 0;
-    left: 50%;
-    transform: translate(-50%, 0);
-  }
-
-  // Modifier for top-right position
-  &--top-right {
-    top: 0;
-    right: 0;
-    left: auto;
-    transform: translate(0, 0);
-  }
-
-  // Modifier for center-left position
-  &--center-left {
-    top: 50%;
-    left: 0;
-    transform: translate(0, -50%);
-  }
-
-  // Modifier for center (default, but can be explicitly stated for clarity)
-  &--center {
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-
-  // Modifier for center-right position
-  &--center-right {
-    top: 50%;
-    right: 0;
-    left: auto;
-    transform: translate(0, -50%);
-  }
-
-  // Modifier for bottom-left position
-  &--bottom-left {
-    bottom: 0;
-    left: 0;
-    top: auto;
-    transform: translate(0, 0);
-  }
-
-  // Modifier for bottom-center position
-  &--bottom-center {
-    bottom: 0;
-    left: 50%;
-    top: auto;
-    transform: translate(-50%, 0);
-  }
-
-  // Modifier for bottom-right position
-  &--bottom-right {
-    bottom: 0;
-    right: 0;
-    left: auto;
-    top: auto;
-    transform: translate(0, 0);
-  }
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .sp-popup__full {
@@ -217,10 +142,9 @@
     }
   }
 
-    .sp-popup__inner {
-    display:grid;
+  .sp-popup__inner {
+    display: grid;
     grid-template: 150px 1fr;
-
     background-color: var(--popup-content-background-colour);
     padding: var(--popup-padding);
     margin: var(--popup-margin);
@@ -276,71 +200,19 @@
 }
 
 .sp-popup-backdrop {
-  position: fixed; // Ensure it covers the entire viewport
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 999; // Place it behind the popup content
-  background-color: rgba(0, 0, 0, 0.5); // Example semi-transparent black
-  opacity: 0; // Initially hidden
-  transition: opacity 0.2s ease-in-out; // Optional transition
-
+  z-index: 999;
+  background-color: var(--popup-backdrop-color);
+  opacity: 0;
+  transition: opacity 0.2s ease-in-out;
   pointer-events: none;
 
   .sp-popup:not(.sp-popup--minimized-state) & {
     pointer-events: auto;
     opacity: 1;
   }
-}
-
-// Image Mode
-
-.sp-popup-backdrop-image__inner {
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-
-.sp-popup-backdrop-image__picture {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-}
-
-.sp-popup-backdrop-image__picture-image {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-// Video Mode
-
-.sp-popup-backdrop-video__inner {
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-
-.sp-popup-backdrop-video__video-player {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  object-fit: cover;
-}
-
-.sp-popup-backdrop-video__video {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
 }
