--- a/client/src/scss/index.scss
+++ b/client/src/scss/index.scss
@@ -299,7 +299,7 @@
   text-orientation: initial;
   padding: 15px 20px;
   display: flex;
-  flex-direction: row;
+  flex-direction: row-reverse;
   gap: 0;
   align-items: center;
   justify-content: space-between;
